# TungstenCore

./: .gitmodules  CMakeLists.txt  README.md
CMake/: TungstenCoreConfig.cmake.in  Version.hpp.in  cmake_uninstall.cmake.in
include/TungstenCore/: Application.hpp  ComponentManager.hpp  ComponentSetup.hpp  ComponentSystem.hpp  EntryPoint.hpp  Scene.hpp  TungstenCore.hpp
src/: Application.cpp  ComponentSetup.cpp  ComponentSystem.cpp  TungstenCore.cpp  wCorePCH.cpp  wCorePCH.hpp
